tests/ui/consts/intrinsic_without_const_stab.stderr
error[E0015]: cannot call non-const fn `copy::copy::<T>` in constant functions
  --> $DIR/intrinsic_without_const_stab.rs:13:14
   |
LL |     unsafe { copy(src, dst, count) }
   |              ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
